Change People to Folks

--- a/HW2/fashionblog.html
+++ b/HW2/fashionblog.html
@@ -9,7 +9,7 @@
 
 <body>
    <header>
-      <h1>Satre's List<h1><h4>Better-Dressed People</h4>
+      <h1>Satre's List<h1><h4>Better-Dressed Folks</h4>
    </header>
        
    <div class="nav">
