--- a/HW3/FEWDR3_BoostrapBlog.html
+++ b/HW3/FEWDR3_BoostrapBlog.html
@@ -12,8 +12,8 @@
  </head>
  <body>
  	<header>
- 	<div class="container">
- 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+ 	<div class="navcontainer">
+ 		<nav class="navbar navbar-expand-lg navbar-default">
  		 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
    		 <span class="navbar-toggler-icon"></span>
  		 </button>
@@ -31,7 +31,7 @@
  	<section>
 		<div id="container">
 			<div class="row">
-			<div class="col-md-8">
+			<div class="col-md-8 my-style-class">
 			<h1 class="bigtitle">The Bootstrap Blog</h1><h2 class="subtitle"> An example blog template built with Boostrap.</h2>
 			<hr>
 			<article>
@@ -126,6 +126,11 @@
 					</article>
 				</aside>
 			</div>
+			<nav aria-label="Page navigation example">
+  <ul class="pagination">
+    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+    <li class="page-item"><a class="page-link" href="#">Next</a></li>
+  </ul>
+</nav>
 		</div>
-
  </body>
