Update: pre-modal

--- a/FinalProject_2/index.html
+++ b/FinalProject_2/index.html
@@ -14,9 +14,41 @@
         <h2>By John Hejduk</h2>
     </header>
     <div class="images">
-        <img id="main1" src="img/Full_Dark.jpg">
+      <div class="column">
+        <img id="img1" src="img/Hejduk_Base-01.jpg">
+        <img id="img5" src="img/Hejduk_Base-05.jpg">
+        <img id="img9" src="img/Hejduk_Base-09.jpg">
+      </div>
+      <div class="column">
+        <img id="img2" src="img/Hejduk_Base-02.jpg">
+        <img id="img6" src="img/Hejduk_Base-06.jpg">
+        <img id="img10" src="img/Hejduk_Base-10.jpg">
+      </div> 
+      <div class="column">
+        <img id="img3" src="img/Hejduk_Base-03.jpg">
+        <img id="img7" src="img/Hejduk_Base-07.jpg">
+        <img id="img11" src="img/Hejduk_Base-11.jpg">
+      </div>
+      <div class="column">
+        <img id="img4" src="img/Hejduk_Base-04.jpg">
+        <img id="img8" src="img/Hejduk_Base-08.jpg">
+        <img id="img12" src="img/Hejduk_Base-12.jpg">
+      </div>
     </div>
+
+     <!-- Img0 Modal -->
+    <div id="img0Modal" class="modal">
+        <span class="close">&times;</span>
+
+        <!-- Img0 Thumb -->
+        <div class="modalThumb"></div>
+
+        <!-- Modal Caption (Image Text) -->
+        <div class="caption"><h3>Gatekeeper</h3><h4>The Gatekeeper</h4><br><br><br><p> Custodian of the park. He lives in the gate-house (entry to the park). The gate-house is situated between two clock towers. One tower has the numbers 0-13 running from the top of the tower to the bottom of the tower. The other has the numbers 0-13 running from the bottom to the top. A blank square rides over the surace of each tower covering the present time. The two blank squares come to parallel alignment. </p></div>
+    </div>
+
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
-        <script src="js/main.js"></script>
+        <script src="js/index.js"></script>
   </body>
 </html>
