Modal Wont Close?

--- a/FinalProject_ModalTest/index.html
+++ b/FinalProject_ModalTest/index.html
@@ -18,16 +18,65 @@
     </div>
 
 
-    <!-- Img0 Modal -->
+    <!-- Img1 Modal -->
     <div id="imgModal" class="modal">
         <span class="close">&times;</span>
 
-        <!-- Img0 Thumb -->
+        <!-- Img Thumb -->
+        <div class="modalThumb"></div>
+
+        <!-- Modal Caption (Image Text) -->
+        <div class="caption"><h3>Children SP</h3><h4>(Sliding Pond)</h4><br><br><br><p> The illusions of smooth surfaces. Friction producing heat, clamped legs around buttocks- the slide down.  </p></div>
+    </div>
+
+
+    <!-- Img2 Modal -->
+    <div id="img2Modal" class="modal">
+        <span class="close">&times;</span>
+
+        <!-- Img Thumb -->
+        <div class="modalThumb"></div>
+
+        <!-- Modal Caption (Image Text) -->
+        <div class="caption"><h3>Children Sp2</h3><h4>(The Spinner)</h4><br><br><br><p> The cars are attached at the ends of a long metal arm. Two cars to an arm. The arm is attached to a central pivot point which connects to the supporting structure. The arm slowly begins to move about a 360 degree circle, picking up speed until it reaches its maximum. The cars themselves spin in a 360 degree cycle perpendicular to the other circle. </p></div>
+    </div>
+
+
+    <!-- Img3 Modal -->
+    <div id="img3Modal" class="modal">
+        <span class="close">&times;</span>
+
+        <!-- Img Thumb -->
         <div class="modalThumb"></div>
 
         <!-- Modal Caption (Image Text) -->
         <div class="caption"><h3>Gatekeeper</h3><h4>The Gatekeeper</h4><br><br><br><p> Custodian of the park. He lives in the gate-house (entry to the park). The gate-house is situated between two clock towers. One tower has the numbers 0-13 running from the top of the tower to the bottom of the tower. The other has the numbers 0-13 running from the bottom to the top. A blank square rides over the surace of each tower covering the present time. The two blank squares come to parallel alignment. </p></div>
     </div>
+
+
+    <!-- Img4 Modal -->
+    <div id="img4Modal" class="modal">
+        <span class="close">&times;</span>
+
+        <!-- Img Thumb -->
+        <div class="modalThumb"></div>
+
+        <!-- Modal Caption (Image Text) -->
+        <div class="caption"><h3>Butterfly Collector</h3><h4> </h4><br><br><br><p> Collects butterflies <br> the irreconcilability of<br>catching butterflies and<br> of writing fiction </p></div>
+    </div>
+
+
+    <!-- Img5 Modal -->
+    <div id="img5Modal" class="modal">
+        <span class="close">&times;</span>
+
+        <!-- Img Thumb -->
+        <div class="modalThumb"></div>
+
+        <!-- Modal Caption (Image Text) -->
+        <div class="caption"><h3>The Horticulturist</h3><h4> </h4><br><br><br><p>The Horticulturist maintains the trees, shrubs, and flowers in the park. He was originally trained as a stone cutter. The cutting of a dark granite was his main work. He decided to become a horticulturist when a dispute arose as to whether there was such a thing as black granite. </p></div>
+    </div>
+
 
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
