--- a/FinalProject_2/index.html
+++ b/FinalProject_2/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <!-- Img1 Modal -->
-    <div id="imgModal" class="modal">
+    <div id="img1Modal" class="modal">
         <span class="close">&times;</span>
 
         <!-- Img Thumb -->
@@ -68,7 +68,9 @@
         <div class="modalThumb"></div>
 
         <!-- Modal Caption (Image Text) -->
-        <div class="caption"><h3>Gatekeeper</h3><h4>The Gatekeeper</h4><br><br><br><p> Custodian of the park. He lives in the gate-house (entry to the park). The gate-house is situated between two clock towers. One tower has the numbers 0-13 running from the top of the tower to the bottom of the tower. The other has the numbers 0-13 running from the bottom to the top. A blank square rides over the surace of each tower covering the present time. The two blank squares come to parallel alignment. </p></div>
+        <div class="caption"><h3>Crochet Lady</h3><p>She arrives at dawn and departs at sunset. She climbs the stairs to her enclosed suspended chair and crochets throughout the day. She usually finishes a piece before the snow falls. Each year she selects a tree which she covers with her shroud of crochet. She carefully drapes the branches of the tree and leaves her work to the elements. 
+            <br><b> Her sadness makes the peacocks screech </b> 
+        </p></div>
     </div>
 
 
@@ -80,7 +82,7 @@
         <div class="modalThumb"></div>
 
         <!-- Modal Caption (Image Text) -->
-        <div class="caption"><h3>Butterfly Collector</h3><h4> </h4><br><br><br><p> Collects butterflies <br> the irreconcilability of<br>catching butterflies and<br> of writing fiction </p></div>
+        <div class="caption"><h3>Butterfly Collector</h3><p>Collects butterflies <br> the irreconcilability of<br>catching butterflies and<br> of writing fiction </p></div>
     </div>
 
 
@@ -92,7 +94,7 @@
         <div class="modalThumb"></div>
 
         <!-- Modal Caption (Image Text) -->
-        <div class="caption"><h3>The Horticulturist</h3><h4> </h4><br><br><br><p>The Horticulturist maintains the trees, shrubs, and flowers in the park. He was originally trained as a stone cutter. The cutting of a dark granite was his main work. He decided to become a horticulturist when a dispute arose as to whether there was such a thing as black granite. </p></div>
+        <div class="caption"><h3>The Horticulturist</h3><br><p>The Horticulturist maintains the trees, shrubs, and flowers in the park. He was originally trained as a stone cutter. The cutting of a dark granite was his main work. He decided to become a horticulturist when a dispute arose as to whether there was such a thing as black granite. </p></div>
     </div>
 
 
@@ -105,7 +107,8 @@
         <div class="modalThumb"></div>
 
         <!-- Modal Caption (Image Text) -->
-        <div class="caption"><h3>The Musician</h3><h4> </h4><br><p>The musician is given Studio B in the park in order to compose. Dutch interior. The mandolin intestines of hollowed black crystals slide against the internal curvature ultimately released through the hole of stretched fibers held then diminished in a tap. </p></div>
+        <div class="caption"><h3>The Musician</h3><br><p>The musician is given Studio B in the park in order to compose. Dutch interior. The mandolin intestines of hollowed black crystals slide against the internal curvature ultimately released through the hole of stretched fibers held then diminished in a tap. 
+        </p></div>
     </div>
 
 
@@ -118,7 +121,7 @@
         <div class="modalThumb"></div>
 
         <!-- Modal Caption (Image Text) -->
-        <div class="caption"><h3>Children SB</h3><h4>Sand Box</h4><br><p>Surrounded by 1” x 1” steel bars 6” on centre, 4’ high. The sand was near deeper than 4” and the concrete base made it hard to sit in. Small things were always lost in the sand box and never found. It smelled of urine. </p></div>
+        <div class="caption"><h3>Children SB</h3><h4>Sand Box</h4><p>Surrounded by 1” x 1” steel bars 6” on centre, 4’ high. The sand was near deeper than 4” and the concrete base made it hard to sit in. Small things were always lost in the sand box and never found.<br><br><b> It smelled of urine.</b></p></div>
     </div>
 
 
@@ -132,7 +135,7 @@
 
         <!-- Modal Caption (Image Text) -->
         <div class="caption"><h3>Nurse</h3><h4>(nurs)</h4><br><p>n. 1. A person who cares for the sick or injured, especially one who is trained to do such work. 5. One who or that which fosters, nourishes, protects. 6. entomb. A sexually incomplete bee, ant, etc. whose function in the colony is to care for the young.  </p></div>
-
+     </div>
 
 
     <!-- Img9 Modal -->
@@ -144,7 +147,7 @@
 
         <!-- Modal Caption (Image Text) -->
         <div class="caption"><h3>Park Attendant</h3><br><p>Custodian of the park. He lives in the gate-house. The gate-house is situated between two clock towers. One tower has the numbers 0-13 running from the top of the tower to the bottom of the tower. The other tower has the numbers 0-13 running from the bottom to the top. A blank square rides over the surface of each tower covering the present time.</p></div>
-
+     </div>
 
 
     <!-- Img10 Modal -->
@@ -156,6 +159,7 @@
 
         <!-- Modal Caption (Image Text) -->
         <div class="caption"><h3>Physician</h3><br><p>Although a man of science, he has an obsession with mirrors. It is their opacity which interests him. He observes each day meticulously the process of his own aging. (He sees it before his eyes.) He is 60 years old and his body verifies this fact. A surgeon of 30 years, he is constantly feeling the weight of organs. </p></div>
+    </div>
 
 
 
@@ -168,7 +172,7 @@
 
         <!-- Modal Caption (Image Text) -->
         <div class="caption"><h3>Room for Thought</h3><h4>(thOT)</h4><br><p>n. 1. The act or process fo using the mind actively and deliberately: meditation; cognition. 2. The product of thinking; an idea, concept, judgement, etc. 3. Intellectual activity of a specific kind: Greek Thought. </p></div>
-
+    </div>
 
 
     <!-- Img12 Modal -->
@@ -180,7 +184,7 @@
 
         <!-- Modal Caption (Image Text) -->
         <div class="caption"><h3>Child</h3><p>The wonder of receiving a clear empty jelly jar at the age of six. Of being given a paint brush and two jars of enamel paint. One filled with blue paint and one filled with yellow. Of being asked to paint the outside of the clear jelly jar with the blue paint and letting the paint dry. Then of being asked to take the yellow paint and with the tip of the brush running it around the outside rim of the jar and watching the yellow paint drip down in streaks over the recently painted blue.</p></div>
-
+    </div>
 
 
     </div>
