--- a/FinalProject_ModalTest/index.html
+++ b/FinalProject_ModalTest/index.html
@@ -50,7 +50,7 @@
         <div class="modalThumb"></div>
 
         <!-- Modal Caption (Image Text) -->
-        <div class="caption"><h3>Gatekeeper</h3><h4>The Gatekeeper</h4><br><br><br><p> Custodian of the park. He lives in the gate-house (entry to the park). The gate-house is situated between two clock towers. One tower has the numbers 0-13 running from the top of the tower to the bottom of the tower. The other has the numbers 0-13 running from the bottom to the top. A blank square rides over the surace of each tower covering the present time. The two blank squares come to parallel alignment. </p></div>
+        <div class="caption"><h3>Crochet Lady</h3><br><p>She arrives at dawn and departs at sunset. She climbs the stairs to her enclosed suspended chair and crochets throughout the day. She usually finishes a piece before the snow falls. Each year she selects a tree which she covers with her shroud of crochet. She carefully drapes the branches of the tree and leaves her work to the elements. <br><b> Her sadness makes the peacocks screech </b></p></div>
     </div>
 
 
@@ -62,7 +62,9 @@
         <div class="modalThumb"></div>
 
         <!-- Modal Caption (Image Text) -->
-        <div class="caption"><h3>Butterfly Collector</h3><h4> </h4><br><br><br><p> Collects butterflies <br> the irreconcilability of<br>catching butterflies and<br> of writing fiction </p></div>
+        <div class="caption"><h3>Butterfly Collector</h3><p> Collects butterflies<br><br> the irreconcilability of<br><br>catching butterflies and<br><br> of writing fiction...
+
+         </p></div>
     </div>
 
 
