--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
         <h1>VICTIMS</h1>
-        <h2>By John Hejduk</h2>
+        <h2>A Proposal by John Hejduk</h2>
     </header>
     <div class="images">
       <div class="column">
